Added keyboard post

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -234,3 +234,10 @@
         }
     }
 }
+
+/** Chase Changes */
+.footnotes {
+    margin-top: 50px;
+    margin-left: -15px;
+    font-size: 12px;
+}
