--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,20 +2,23 @@
 
   <div class="wrapper">
 
-    <h2 class="footer-heading">{{ site.title }}</h2>
+    <!--<h2 class="footer-heading">{{ site.title }}</h2>-->
 
     <div class="footer-col-wrapper">
       <div class="footer-col  footer-col-1">
         <ul class="contact-list">
-          <li>{{ site.title }}</li>
-          <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <!--<li>{{ site.title }}</li>-->
+          <!--<li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>-->
         </ul>
       </div>
 
       <div class="footer-col  footer-col-2">
         <ul class="social-media-list">
-          {% if site.github_username %}
           <li>
+              <span><a href="mailto:{{ site.email }}">{{ site.email }}</a></span>
+          </li>
+          {% if site.github_username %}
+          <li style="text-align: center">
             <a href="https://github.com/{{ site.github_username }}">
               <span class="icon  icon--github">
                 <svg viewBox="0 0 16 16">
