--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -210,8 +210,16 @@
 .post-content {
     margin-bottom: $spacing-unit;
 
+    h1 {
+        font-size: 40px;
+
+        @include media-query($on-laptop) {
+            font-size: 32px;
+        }
+    }
+
     h2 {
-        font-size: 32px;
+        font-size: 30px;
 
         @include media-query($on-laptop) {
             font-size: 28px;
