--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper">
 
-    <a class="site-title" href="{{ site.baseurl }}/">{{ site.title }}</a>
+    <a class="site-title" href="https://chaselambda.com">Chase λ</a>
 
     <nav class="site-nav">
       <a href="#" class="menu-icon">
@@ -14,11 +14,13 @@
       </a>
 
       <div class="trigger">
-        {% for page in site.pages %}
-          {% if page.title %}
-          <a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>
-          {% endif %}
-        {% endfor %}
+        <a class="page-link" href="{{ site.baseurl }}/">Blog</a>
+        <a class="page-link" href="https://chaselambda.com">About</a>
+        <!--{% for page in site.pages %}-->
+          <!--{% if page.title %}-->
+          <!--<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>-->
+          <!--{% endif %}-->
+        <!--{% endfor %}-->
       </div>
     </nav>
 
