--- a/css/main.scss
+++ b/css/main.scss
@@ -12,9 +12,9 @@ $base-line-height: 1.5;
 
 $spacing-unit: 30px;
 
-$text-color: #111;
-$background-color: #fdfdfd;
-$brand-color: #2a7ae2;
+$text-color: white;
+$background-color: #2E2E2E;
+$brand-color: #b6bdff;
 
 $grey-color: #828282;
 $grey-color-light: lighten($grey-color, 40%);
