Add climate page

--- a/css/main.scss
+++ b/css/main.scss
@@ -118,5 +118,36 @@ $on-laptop: 800px;
   height: 100%;
 }
 
+.center-pic {
+  display: flex;
+  justify-content: center;
+  margin: 20px 0 10px 0;
+}
+
+.climate-title {
+  display: flex;
+  justify-content: center;
+  font-size: 42px;
+    letter-spacing: -1px;
+    line-height: 1;
+    font-weight: 300;
+}
+
+.climate-subtitle {
+  display: flex;
+  justify-content: right;
+  font-size: 14px;
+  font-style: italic;
+  color: #bbb;
+}
+
+.img-alt {
+  display: flex;
+  justify-content: center;
+  font-size: 14px;
+  font-style: italic;
+  color: #bbb;
+}
+
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "base", "layout", "syntax-highlighting";
