--- a/_includes/header.html
+++ b/_includes/header.html
@@ -15,7 +15,7 @@
 
       <div class="trigger">
         <a class="page-link" href="{{ site.baseurl }}/">Blog</a>
-        <a class="page-link" href="https://chaselambda.com">About</a>
+        <a class="page-link" href="{{ site.baseurl }}/about">About</a>
         <!--{% for page in site.pages %}-->
           <!--{% if page.title %}-->
           <!--<a class="page-link" href="{{ page.url | prepend: site.baseurl }}">{{ page.title }}</a>-->
