--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,5 @@
 
     <link rel="stylesheet" href="{{ "/css/main.css?date=04-05-23" | prepend: site.baseurl }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}">
+    <script src="{{ "/js/main.js" | prepend: site.baseurl }}"></script>
 </head>
